# YFCLUB

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 新版会员管理系统产品文档.md  新版会员管理系统技术文档.md  旧TXT迁移脚本.md  迁移文件格式.md
scripts/: convert-legacy-yfwt-txt.mjs  package-windows-portable.ps1
src/: App.vue  api.ts  localization.ts  navigation.ts  router.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  state.rs  utils.rs
src/components/: ModalDialog.vue
src/composables/: useClubApp.ts
src/views/: GiftsView.vue  LogsView.vue  MembersView.vue  MigrationView.vue  OverviewView.vue  SettingsView.vue
