[package]
name = "member-club"
version = "0.1.0"
description = "永丰文体会员管理系统"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
pinyin = "0.11.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
